<resources>
    <string name="app_name">MyTaxi</string>
    <string name="login">Login</string>
    <string name="distance_format">Distance: %1$s km</string>
    <string name="time_elapsed_format">Time: %1$d min</string>
    <string name="total_fare_format">Fare: %1$s DH</string>
    <string name="end_ride">End Ride</string>
    <string name="start_ride">Start Ride</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Add_Driver">Add Driver</string>
    <string name="permiType">Permie Type</string>
    <string name="Age">Age</string>
    <string name="Last_Name">Last Name</string>
    <string name="First_Name">First Name</string>
    <string name="go_to_position">go to position</string>
    <string name="edit">Edit Profile</string>
    <string name="Aged">Age:</string>
    <string name="Permie_Typee">Permie Type: </string>
    <string name="distance">Distance: 0 km </string>
    <string name="time">Time: 0 min</string>
    <string name="Fare">Fare: 0.00 DH</string>
    <string name="ride">Start Ride</string>
    <string name="fr">French</string>
    <string name="ar">Arabic</string>
    <string name="en">English</string>
    <string name="choose">set Language</string>
    <string name="dark">Dark Mode</string>
    <string name="light">Light Mode</string>
</resources>