<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.fragments.profile.ProfileFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/textC"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"/>

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/First_Name"
        android:textColorHint="@color/textC"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/Last_Name"
        android:textColorHint="@color/textC"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/Age"
        android:textColorHint="@color/textC"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etPermiType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/permiType"
        android:textColorHint="@color/textC"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnAddDriver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Add_Driver"
        android:backgroundTint="#FFD700"
        android:textColor="@color/btnc"/>

</LinearLayout>
