<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.HomePage">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_margin="20dp" />

        <TextView
            android:id="@+id/tvDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance"
            android:textColor="@color/infos" />

        <TextView
            android:id="@+id/tvTimeElapsed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/infos"
            android:text="@string/time" />

        <TextView
            android:id="@+id/tvTotalFare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/infos"
            android:layout_marginTop="8dp"
            android:text="@string/Fare" />

        <Button
            android:id="@+id/btnToggleRide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ride"
            android:backgroundTint="#FFD700"
            android:layout_marginTop="20dp"
            android:textColor="@color/btnc"/>

    </LinearLayout>
</LinearLayout>